force-app/main/default/objects/Lead/fields/CountryAlpha2Code__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha2Code__c</fullName>
    <description>Alpha2Code for the Country set in the Address field.</description>
    <label>Country Alpha2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>