force-app/main/default/objects/Lead/fields/CountryAlpha3Code__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha3Code__c</fullName>
    <description>Alpha3Code of the country set in the Address field, populated from the CountryLayer API.</description>
    <label>Country Alpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>