force-app/main/default/objects/Lead/fields/CountryCapital__c.field-meta.xml
<CustomField>
    <fullName>CountryCapital__c</fullName>
    <description>Capital of the country set in the Address field, populated from the CountryLayer API.</description>
    <label>Country Capital</label>
    <length>160</length>
    <type>Text</type>
</CustomField>