force-app/main/default/objects/Lead/fields/CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>CountryRegion__c</fullName>
    <description>Region of the country set in the Address field, populated from the CountryLayer API.</description>
    <label>CountryRegion</label>
    <length>160</length>
    <type>Text</type>
</CustomField>