force-app/main/default/objects/Lead/fields/OwnerSince__c.field-meta.xml
<CustomField>
    <fullName>OwnerSince__c</fullName>
    <description>Date/time the current owner was assigned.</description>
    <label>Owner Since</label>
    <type>DateTime</type>
</CustomField>